--- a/xeekwebsite_server/static/css/component.css
+++ b/xeekwebsite_server/static/css/component.css
@@ -65,7 +65,7 @@
     height: 0.16rem;
     width: 0.16rem;
     border-radius: 0.08rem;
-    margin: 0.06rem 0 0 0.03rem;
+    /* margin: 0.06rem 0 0 0.03rem; */
 
  }
  .component-contentcard > div > .title{
