--- a/xeekwebsite_server/templates/article/index.html
+++ b/xeekwebsite_server/templates/article/index.html
@@ -16,7 +16,7 @@
 </div>
 <a class="article-user" href="/users/76562">
     <div class="article-user-border">
-        <img src="https://alioss.g-cores.com/uploads/user/e336a4fc-e8b5-4c12-afe6-c04434d9f1e2_normalat2x.jpg" alt="">
+        <img style="height: 80px!important;" src="https://alioss.g-cores.com/uploads/user/e336a4fc-e8b5-4c12-afe6-c04434d9f1e2_normalat2x.jpg" alt="">
     </div>
     <p class="article-user-name">
         otaconl...
