--- a/xeekwebsite_server/templates/article/markdown.html
+++ b/xeekwebsite_server/templates/article/markdown.html
@@ -28,7 +28,7 @@
 </div>
 <a class="article-user" href="/users/76562">
     <div class="article-user-border">
-        <img src="https://alioss.gcores.com/uploads/user/0e51fe48-a31b-4bd1-896f-4a1397bb99fb_normalat2x.jpg" alt="">
+        <img style="height:80px" src="https://alioss.gcores.com/uploads/user/0e51fe48-a31b-4bd1-896f-4a1397bb99fb_normalat2x.jpg" alt="">
     </div>
     <p class="article-user-name">
         xeekseven
