--- a/xeekwebsite_server/templates/base.html
+++ b/xeekwebsite_server/templates/base.html
@@ -32,7 +32,7 @@
 <body style="margin:0px;background-color:#fff;overflow-x: hidden;">
     <div class="main-site flex-column flex-main-start" style="width:100%">
         <div class="wsite-header flex-row flex-main-start">
-            <a href="#" class="flex-column flex-main-center header-log">
+            <a href="/" class="flex-column flex-main-center header-log">
                 <img src="/static/img/xeeksite.png" style="max-height:28px" />
             </a>
             <div class="flex-row flex-main-start header-menu">
