--- a/xeekwebsite_server/templates/home/index.html
+++ b/xeekwebsite_server/templates/home/index.html
@@ -16,20 +16,20 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img style="height: 4.2rem;width: auto; max-width: 200%;margin-left:-25%;" src="/static/img/c1.jpg" alt="...">
+            <div class="item active" style="background-image: url(static/img/c1.jpg);">
+                <!-- <img style="height: 4.2rem;width: auto; max-width: 200%;margin-left:-25%;" src="/static/img/c1.jpg" alt="..."> -->
                 <div class="carousel-caption">
 
                 </div>
             </div>
-            <div class="item">
-                <img style="height: 4.2rem;width: auto; max-width: 200%;margin-left:-25%;" src="/static/img/c2.jpg" alt="...">
+            <div class="item" style="background-image: url(static/img/c2.jpg);">
+                <!-- <img style="height: 4.2rem;width: auto; max-width: 200%;margin-left:-25%;" src="/static/img/c2.jpg" alt="..."> -->
                 <div class="carousel-caption">
 
                 </div>
             </div>
-            <div class="item">
-                <img style="height: 4.2rem;width: auto; max-width: 200%;margin-left:-25%;" src="/static/img/c1.jpg" alt="...">
+            <div class="item" style="background-image: url(static/img/c1.jpg);">
+                <!-- <img style="height: 4.2rem;width: auto; max-width: 200%;margin-left:-25%;" src="/static/img/c1.jpg" alt="..."> -->
                 <div class="carousel-caption">
 
                 </div>
