--- a/xeekwebsite_server/templates/base.html
+++ b/xeekwebsite_server/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html style="font-size:100px">
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %}</title>
 
 <head>
     <meta charset="utf-8">
@@ -16,14 +16,14 @@
         crossorigin="anonymous"></script>
     {% block script %}
     {% endblock %}
-    <meta name="keywords" content="游戏,游戏电台,游戏广播,游戏播客,电视游戏,家用机游戏,单机游戏,游戏论坛,游戏新闻,游戏视频.">
+    <meta name="keywords" content="博客,个人,游戏电台,游戏广播,游戏播客,电视游戏,家用机游戏,单机游戏,游戏论坛,游戏新闻,游戏视频.">
 
     <meta name="description" content="从游戏到生活，我们生产内容，关乎你喜爱的一切。">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/flexcss.css" />
     <link rel="stylesheet" href="/static/css/component.css" />
-    <link rel="stylesheet" href="/static/css/test.css" />
+    <link rel="stylesheet" href="/static/css/hsite.css" />
     <link rel="stylesheet" href="/static/css/wsite.css" />
     {% block style %}
     {% endblock %}
@@ -33,7 +33,7 @@
     <div class="main-site flex-column flex-main-start" style="width:100%">
         <div class="wsite-header flex-row flex-main-start">
             <a href="/" class="flex-column flex-main-center header-log">
-                <img src="/static/img/xeeksite.png" style="max-height:28px" />
+                <img src="/static/img/xeeksite.png" style="max-height:50px" />
             </a>
             <div class="flex-row flex-main-start header-menu">
                 <div class="flex-column flex-main-center header-menu-detail">语言</div>
@@ -70,7 +70,7 @@
         </div>
         <div class="flex-column flex-main-center wsite-footer">
             <div class="footer_contact">
-                <a href="mailto:haolun@g-cores.com" target="_blank">CONTACT US | 联系我们</a>
+                <a href="mailto:xeekseven@gmail.com" target="_blank">CONTACT US | 联系我们</a>
             </div>
             <div class="flex-column flex-main-start flex-align-center footer_info">
                 <img class="footer_top" data-no-retina="" src="static/img/footer_logo.jpg"
@@ -92,17 +92,17 @@
                 <div class="footer_follow">
                     <h4>Follow us</h4>
                     <p>
-                        <a href="http://weibo.com/gamecore" target="_blank" class="footer_weibo"></a>
+                        <!-- <a href="http://weibo.com/gamecore" target="_blank" class="footer_weibo"></a> -->
                         <a href="javascript:;" class="footer_weixin" data-toggle="tooltip" data-placement="top" title=""
-                            data-original-title="微信号：gamecores，欢迎订阅"></a>
-                        <a href="http://shop124260606.taobao.com" target="_blank" class="footer_taobao"></a>
+                            data-original-title="微信号：jianzhuna，欢迎订阅"></a>
+                        <a href="https://github.com/xeekseven" target="_blank" class="footer_github"></a>
                         <a href="http://itunes.apple.com/cn/podcast/id420660752" target="_blank" class="footer_podcast"></a>
                         <a href="https://www.g-cores.com/rss" target="_blank" class="footer_rss"></a>
                     </p>
                 </div>
 
                 <p>
-                    All Rights Reserved 2009-2015 GAMECORES - Terms &amp; Conditions 闽ICP备11023385号-1
+                    All Rights Reserved 2017-2019 XEEKSEVEN - STUDIO &amp; Conditions 蜀ICP备19028169号-1
                 </p>
             </div>
         </div>
