--- a/xeekwebsite_server/templates/home/index.html
+++ b/xeekwebsite_server/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block header %}
-<h1>{% block title %}index{% endblock %}</h1>
+<h1>{% block title %}xeekseven‘s website{% endblock %}</h1>
 {% endblock %} 
 
 {% block content_header %}
