--- a/xeekwebsite_server/templates/nohead_nofooter_base.html
+++ b/xeekwebsite_server/templates/nohead_nofooter_base.html
@@ -23,7 +23,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/flexcss.css" />
     <link rel="stylesheet" href="/static/css/component.css" />
-    <link rel="stylesheet" href="/static/css/test.css" />
+    <link rel="stylesheet" href="/static/css/hsite.css" />
     <link rel="stylesheet" href="/static/css/wsite.css" />
     {% block style %}
     {% endblock %}
