--- a/xeekwebsite_server/templates/article/markdown.html
+++ b/xeekwebsite_server/templates/article/markdown.html
@@ -21,7 +21,7 @@
         <div class="article-header-cover"></div>
         <div class="article-header-imgContainer">
             <div class="article-header-imgContainer-img">
-                <img data-no-retina="" alt="这就是战地！DICE放出《战地V》全新宣传片" src="https://image.gcores.com/508c648f-af92-42e6-8be7-fdea689c1436.jpg?x-oss-process=style/original_hl">
+                <!-- <img data-no-retina="" alt="这就是战地！DICE放出《战地V》全新宣传片" src="https://image.gcores.com/508c648f-af92-42e6-8be7-fdea689c1436.jpg?x-oss-process=style/original_hl"> -->
             </div>
         </div>
     </div>
