--- a/xeekwebsite_server/static/css/hsite.css
+++ b/xeekwebsite_server/static/css/hsite.css
@@ -94,7 +94,6 @@
     left: 50%; 
     /* margin-left: 3.5rem; */
     /* margin-top: -0.38rem; */
-    padding-left: 4rem;
     z-index: 2;
     background-color: white;
 }
@@ -105,6 +104,7 @@
     /* padding: 5px; */
     overflow: hidden;
     margin-top: -0.4rem;
+    margin-left: -40px;
     border: 0.04rem solid #fff;
     background: #fff;
 }
@@ -225,11 +225,7 @@
     margin: 0 0.15rem;
 }
 
-.article-create-markdown{
-    width:100%;
-    height:auto;
-    padding: 0.3rem 0.3rem;
-}
+
 .input-writetitle{
     margin-top: 20px;
     margin-bottom: 10px;
@@ -301,4 +297,25 @@
     text-indent: 2em;
     letter-spacing: 2em;
     font-size: 16px;
+}
+/* 电脑 css */
+@media only screen and (max-width: 600px) {
+    .article-user{
+        padding-left: 50%;
+    }
+    .article-create-markdown{
+        width:100%;
+        height:auto;
+    }
+}
+/* 手机 css */
+@media only screen and (min-width: 600px){
+    .article-user{
+        padding-left: 25%;
+    }
+    .article-create-markdown{
+        width:100%;
+        height:auto;
+        padding: 0.3rem 0.3rem;
+    }
 }
